# smart-wallet-beacon-manager

./: .gitignore  README.md  cabal.project  smart-wallet-beacon-manager.cabal
.github/workflows/: deploy.yml
app/: Main.hs
config/: beacon-dev.yaml  beacon.yaml
src/ZkFold/Cardano/SmartWallet/Beacon/: Config.hs  Manager.hs  Types.hs  Utils.hs
